fixed footer on mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -72,7 +72,7 @@ p {
 			color: #fff;
 			font-size: 1.7rem;
 			//font-size: 28px;
-			margin: 5% 0;
+			margin: 5% 0 0 0;
 		}
 	}
 }
@@ -83,7 +83,7 @@ p {
     left: 50%;
     height: 30%;
     width: 70%;
-    margin: -15% 0 0 -35%;
+    margin: -10% 0 0 -35%;
 }
 
 .fullHeight {
@@ -144,7 +144,8 @@ p {
 
 #footer {
 	background-color: $bannerGray;
-	height: 22%;
+	min-height: 22%;
+	height: auto;
 
 	div {
 		text-align: center;
@@ -241,7 +242,9 @@ p {
 @media #{$small-only} { 
 
 	.copyBanner {
-		bottom: -500px !important;
+
+		height: 120px !important;
+
 		h2 {font-size: 1rem !important;}
 	}
 }
